@@ -6,37 +6,23 @@
 	padding-top:2px;
 
 	.bar {
-		position:relative;
 		padding:10px 0;
+		position:relative;
 
 		.slider {
+			background:url(../img/timerange.png) repeat-x 0 -32px;
 			position:relative;
 			width:472px;
-			background:url(../img/timerange.png) repeat-x 0 -32px; }
 
-		.track {
-			height:3px;
-			display:inline-block;
-			cursor:pointer; }
-
-		.trackStart {
-			width:4px;
-			background:url(../img/timerange.png) no-repeat 0 -49px; }
-
-		.trackEnd {
-			width:4px;
-			background:url(../img/timerange.png) no-repeat 0 -17px; }
-
-		.slider {
 			.handle {
+				background:url(../img/timerange-handle.png) center center no-repeat;
+				cursor:ew-resize;
+				cursor:move;
+				height:20px;
+				margin-top:-17px;
 				position:absolute;
 				width:20px;
-				height:20px;
-				cursor:move;
-				cursor:ew-resize;
-				background:url(../img/timerange-handle.png) center center no-repeat;
-				margin-top:-17px;
-				z-index:10; }
+				z-index:10;	}
 
 			.handleStart {
 				margin-left:-4px; }
@@ -45,23 +31,36 @@
 				margin-left:-5px; }
 		}
 
-		.span {
-			position:relative;
-			margin-left:5px;
+		.track {
 			height:3px;
-			z-index:9;
+			display:inline-block;
+			cursor:pointer; }
+
+		.trackStart {
+			background:url(../img/timerange.png) no-repeat 0 -49px;
+			width:4px; }
+
+		.trackEnd {
+			background:url(../img/timerange.png) no-repeat 0 -17px;
+			width:4px; }
+
+		.span {
 			background-color:$black;
-			cursor:default; }
+			cursor:default;
+			height:3px;
+			margin-left:5px;
+			position:relative;
+			z-index:9; }
 	}
 
 	.limits {
-		font-size:10px;
 		display:block;
+		font-size:10px;
 
 		> div {
 			clear:none;
-			width:60px;
-			height:16px; }
+			height:16px;
+			width:60px; }
 
 		.limit {
 			&.min {
@@ -80,36 +79,43 @@
 
 		.start,
 		.ranges {
-			float:left;
-			clear:none; }
+			clear:none;
+			float:left; }
 
 		.start {
 			width:100px; }
 
 		.end {
-			width:81px;
 			clear:none;
-			float:right; }
+			float:right;
+			width:81px; }
 
 		input {
 			width:60px; }
 
 		.ranges {
-			position:absolute;
-			top:0px;
-			z-index:5;
+			background:#ffffff; /* Old browsers */
+			background:-moz-linear-gradient(top, #ffffff 0%, #e0e0e0 100%); /* FF3.6+ */
+			background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e0e0e0)); /* Chrome,Safari4+ */
+			background:-webkit-linear-gradient(top, #ffffff 0%,#e0e0e0 100%); /* Chrome10+,Safari5.1+ */
+			background:-o-linear-gradient(top, #ffffff 0%,#e0e0e0 100%); /* Opera 11.10+ */
+			background:-ms-linear-gradient(top, #ffffff 0%,#e0e0e0 100%); /* IE10+ */
+			background:linear-gradient(to bottom, #ffffff 0%,#e0e0e0 100%); /* W3C */
+			filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e0e0e0',GradientType=0 ); /* IE6-9 */
+			border-radius:13px;
+			border:1px solid $colorNeutral04;
+			cursor:pointer;
 			left:50%;
-			right:50%;
-			width:185px;
+			line-height:20px;
 			margin:-2px 0 0 -75px;
 			padding:0 5px;
-			cursor:pointer;
-			line-height:20px;
+			position:absolute;
+			right:50%;
 			text-align:center;
+			top:0px;
 			white-space:nowrap;
-			background:url(../img/bg-button-css3.png) repeat-x 0 50% $white;
-			border:1px solid $colorNeutral04;
-			border-radius:13px;
+			width:185px;
+			z-index:5;
 
 			&:hover {
 				margin:-7px -15px -10px -80px;
@@ -127,16 +133,16 @@
 			}
 
 			ul {
-				display:none;
-				z-index:9999; /* always in front */
-				padding:0px;
 				color:$colorNeutral07;
+				display:none;
+				padding:0px;
 				text-align:left;
+				z-index:9999; /* always in front */
 
 				li {
+					border-bottom:1px solid $colorNeutral02;
 					cursor:pointer;
 					line-height:18px;
-					border-bottom:1px solid $colorNeutral02;
 
 					&:hover {
 						background-color:$colorNeutral01; }
